# voss

./: .dockerignore  .gitattributes  .gitignore  .vercelignore  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  SBOM.cdx.json  SECURITY_AUDIT_REPORT.md  VEX.cdx.json  dist-workspace.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  repomix-output.xml
.antigravitycli/: 276c618a-5604-42b2-9df5-6185193fb4b5.json
.github/: dependabot.yml
.planning/: ADE-REDESIGN.md  AUDIT-INDEX.md  BOS-EVENT-SCHEMA.md  CODEX-OAUTH-PLAN.md  FEATURE_PROPOSALS.md  Feature Plan.md  HARNESS-PLAN.md  HYBRID-REFACTOR-PLAN.md  LEM-VISION.md  MCP-PLAN.md  MILESTONES.md  OPENCODE-TUI-ADAPTER-CONTRACT.md  ORCHESTRATION-PLAN.md  PROJECT.md  PROTOCOL.md  REQUIREMENTS.md  ROADMAP.md  RUST-PORT-PLAN.md  STATE.md  TUI-FIXES-HANDOFF.md  VOSS-USERSPACE-OS-HANDOFF.md  config.json  haskell_frontend_0ba87f84.plan.md
.playwright-mcp/: page-2026-05-10T20-08-30-965Z.yml  page-2026-05-10T20-08-42-839Z.yml  page-2026-05-17T01-13-28-485Z.yml  page-2026-05-26T19-46-28-079Z.yml  page-2026-05-26T19-47-07-833Z.yml  page-2026-05-26T20-12-51-165Z.yml  page-2026-05-26T20-13-01-330Z.yml  page-2026-05-26T20-16-23-747Z.yml  page-2026-05-26T20-17-11-370Z.yml  page-2026-05-26T20-21-38-776Z.yml  page-2026-05-26T20-22-17-054Z.yml  page-2026-05-26T20-22-52-539Z.yml  page-2026-05-26T20-23-09-634Z.yml
.serena/: project.yml
.voss/: session.json
apps/voss-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/voss-app/src-tauri/capabilities/: default.json
apps/voss-app/src-tauri/icons/: icon.icns
apps/voss-app/src-tauri/resources/: README.md  voss-ade.desktop
apps/voss-app/src-tauri/src/: lib.rs  main.rs
contracts/: decision-ledger.schema.json  events.schema.json  openapi.json  outcomes.schema.json
crates/voss-agent/: Cargo.toml
crates/voss-agent/src/: dispatch.rs  episodic.rs  lib.rs  plan.rs  run_turn.rs
crates/voss-agent/tests/: parallel_dispatch.rs  run_turn.rs
crates/voss-app-core/: Cargo.toml
crates/voss-app-core/src/: agent_registry.rs  appearance.rs  fonts.rs  grid.rs  keymap.rs  layouts.rs  lib.rs  profiles.rs  project.rs  sandbox.rs  session.rs  sidecar.rs  themes.rs  workspaces.rs
crates/voss-app-core/src/pty/: commands.rs  foreground.rs  mod.rs  reader.rs  tests.rs  writer.rs
crates/voss-auth/: Cargo.toml
crates/voss-auth/src/: anthropic.rs  codex.rs  file_store.rs  keychain.rs  lib.rs  refresh.rs  resolve.rs
crates/voss-auth/tests/: file_round_trip.rs  keychain_round_trip.rs  refresh.rs
crates/voss-bridge/: Cargo.toml
crates/voss-bridge/src/: framing.rs  jsonrpc.rs  lib.rs
crates/voss-bridge/tests/: framing.rs  round_trip.rs
crates/voss-cli/: Cargo.toml
crates/voss-cli/src/: extensions.rs  lib.rs  main.rs  permissions.rs  plugins.rs  session.rs
crates/voss-cli/src/cli/: auth_to_provider.rs  do_cmd.rs  doctor.rs  mod.rs  repl.rs  resume.rs  sessions.rs
crates/voss-cli/tests/: ast_parity.rs  doctor_parity.rs  permissions_round_trip.rs  repl_smoke.rs  session_parity.rs  sessions_cli.rs
crates/voss-providers/: Cargo.toml
crates/voss-providers/src/: anthropic.rs  lib.rs  openai.rs  traits.rs
crates/voss-providers/tests/: anthropic_refresh_on_401.rs  anthropic_request_snapshot.rs  codex_fixture_replay.rs  codex_refresh_on_401.rs  live_anthropic.rs  live_codex.rs  schema_parity.rs
crates/voss-providers/tests/snapshots/: anthropic_request_snapshot__anthropic_request_body_with_response_schema.snap
crates/voss-render/: Cargo.toml
crates/voss-render/src/: lib.rs  markdown.rs  ndjson.rs  plain.rs  render_trait.rs  status_line.rs  tty.rs
crates/voss-render/tests/: ndjson_snapshot.rs  status_line.rs
crates/voss-render/tests/snapshots/: ndjson_snapshot__ndjson_banner.snap  ndjson_snapshot__ndjson_clarify.snap  ndjson_snapshot__ndjson_final.snap  ndjson_snapshot__ndjson_plan.snap  ndjson_snapshot__ndjson_status.snap  ndjson_snapshot__ndjson_thinking.snap  ndjson_snapshot__ndjson_tool.snap  ndjson_snapshot__ndjson_user.snap
crates/voss-sdk/: Cargo.toml
crates/voss-sdk/.voss/sessions/: 4fa23babc216.json  56bda359337d.json  a7eed5bcb6b7.json  be03e8e370c1.json  ddf56ede4d50.json
crates/voss-sdk/examples/: sdk_proof_consumer.rs
crates/voss-sdk/src/: auth.rs  client.rs  error.rs  lib.rs  projection.rs  stream.rs  supervisor.rs
crates/voss-sdk/src/types/: events.rs  mod.rs  rest.rs
crates/voss-sdk/tests/: drift.rs  events.rs  integration.rs
crates/voss-tools/: Cargo.toml
crates/voss-tools/src/: anchor.rs  fs_edit.rs  fs_glob.rs  fs_grep.rs  fs_read.rs  fs_write.rs  git_diff.rs  git_status.rs  lib.rs  registry.rs  sandbox.rs  shell_capture.rs  shell_run.rs  tool_trait.rs  voss_check.rs
crates/voss-tools/tests/: fs_tools.rs  jail_dbg.rs  sandbox.rs  schema_parity.rs  shell_tools.rs
crates/voss-tui/: Cargo.toml
crates/voss-tui/.voss/sessions/: 6d627ccaa53a.json
crates/voss-tui/src/: app.rs  doctor.rs  event.rs  lib.rs  main.rs  net.rs  server.rs  sessions.rs  store.rs
crates/voss-tui/tests/: native_store.rs  over_the_wire.rs  protocol_parity.rs  thin_client_invariant.rs
docs/: BOS5-OUTCOME-REWARD-SPEC.md  SKILLS_REPORT.md  agent-coordination.md  check-native-embedding-refs.sh  native-embedding.md  oh-my-pi-feature-adoption-plan.md  sdk.md  tui-redesign-spec.md  voss-vs-python.md
frontend-hs/: README.md  hie.yaml  voss-frontend.cabal
frontend-hs/app/: Main.hs
frontend-hs/src/: Ast.hs  JsonOut.hs  Parser.hs
frontend-hs/src/Voss/: Parse.hs
language-metadata/: voss.yml
npm/: README.md  package-lock.json  package.json
samples/: audit-gates.voss  classify.voss  research.voss  reviewer-split.voss  support.voss  team-orchestration.voss
scripts/: diag_plan_direct.py  dump_python_plan_schema.py  dump_python_tool_schemas.py  export_contract.py  generate_sdk_events.py  repro_server.sh  sign_fixture_bundle.py
site/: README.md  components.json  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
tests/: conftest.py  test_agent.py  test_bridge_server.py  test_budget.py  test_config.py  test_context.py  (+7 more)
(+2840 files in other folders)
