[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voss"
version = "0.1.0"
description = "Voss runtime library"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
    "litellm>=1.50.0",
    "pydantic>=2.6,<3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
voss = "voss.cli:main"

[tool.setuptools]
packages = ["voss_runtime", "voss"]
package-data = { "voss" = ["grammar.lark", "py.typed", "templates/init/*"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits real provider APIs (run with -m live)",
    "slow: takes > 1s",
]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["voss_runtime"]

[tool.coverage.report]
fail_under = 90
