[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voss"
version = "0.1.0"
description = "Voss runtime library"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
    "litellm>=1.50.0",
    "pydantic>=2.6,<3.0",
    "portalocker>=2.8",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.58,<1.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
# Semantic memory (vector search). Pulls torch + transformers transitively
# (~1GB on macOS, ~5GB on Linux with CUDA). Optional to keep the default
# install + the M6 npm wrapper under npm registry size limits (M6-04 Task
# 4 decision). Install via `pip install voss[search]` or, after the npm
# wrapper lands, via `voss extras install search`.
search = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    # `dev` includes `search` so the test suite can exercise semantic memory.
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]

[project.scripts]
voss = "voss.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["voss*", "voss_runtime*"]
exclude = ["tests*", "build*", "dist*"]

[tool.setuptools.package-data]
voss = [
    "grammar.lark",
    "py.typed",
    "templates/init/*",
    "harness/agent/*.voss",
]
voss_runtime = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits real provider APIs (run with -m live)",
    "slow: takes > 1s",
    "t1: T1 acceptance suite (run with -m t1)",
    "acceptance: SPEC-level acceptance contract tests",
]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["voss_runtime"]

[tool.coverage.report]
fail_under = 90
