[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voss"
version = "0.1.1"
description = "Voss runtime library"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
    "litellm>=1.74.0",  # T4 CACHE-03: cache-cost double-count fix (PR #9838, PR #25517)
    "pydantic>=2.6,<3.0",
    "portalocker>=2.8",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
    "jinja2>=3.1,<4",
    "rich>=13.0.0",
    "textual>=0.58,<9.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
    "psutil>=5.9,<8",
    "watchdog>=4.0,<7",
    "cryptography>=43.0.3",
    "tomli-w>=1.0",
    "rank-bm25>=0.2.2",
    "jsonschema>=4.0",  # task tool: schema-validated subagent returns
]

[project.optional-dependencies]
# Semantic memory (vector search). Pulls torch + transformers transitively
# (~1GB on macOS, ~5GB on Linux with CUDA). Optional to keep the default
# install + the M6 npm wrapper under npm registry size limits (M6-04 Task
# 4 decision). Install via `pip install voss[search]` or, after the npm
# wrapper lands, via `voss extras install search`.
search = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]
code = [
    "pygls>=2.1,<3.0",
    "ast-grep-cli>=0.42,<0.43",
]
# REST+SSE harness server (HYBRID-REFACTOR-PLAN H1). Hosts the existing
# agent loop over HTTP+SSE so a thin Rust client (voss-tui) can drive it.
# Optional: the in-process Textual/plain harness does not need these.
server = [
    "fastapi>=0.136",
    "sse-starlette>=3.4",
    "uvicorn[standard]>=0.30",
]
# Claude subscription via the official Agent SDK (`voss chat --auth=claude`).
# Optional: spawns the user's logged-in `claude` CLI; offline tests use the
# provider's query_fn seam and do not need it.
claude = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-textual-snapshot>=1.1.0",
    "Pillow>=10.0",
    "respx>=0.21",
    "vcrpy>=8.0.0,<9",  # T4 CACHE-05: cassette replay; v8 patches httpcore
    "watchdog>=4.0,<7",
    # `dev` includes `search` so the test suite can exercise semantic memory.
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    # `dev` includes `server` so the harness server tests can import FastAPI.
    "fastapi>=0.136",
    "sse-starlette>=3.4",
    "uvicorn[standard]>=0.30",
    # `dev` includes `claude` so live smoke + type checks can import the SDK.
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
voss = "voss.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["voss*", "voss_runtime*"]
exclude = ["tests*", "build*", "dist*"]

[tool.setuptools.package-data]
voss = [
    "grammar.lark",
    "py.typed",
    "templates/init/*",
    "templates/docs/*",
    "templates/prompts/*",
    "templates/audit/*",
    "templates/code/*",
    "templates/eval/*",
    "templates/inspect/*",
    "templates/lint/*",
    "templates/memory/*",
    "templates/recorder/*",
    "harness/agent/*.voss",
    "harness/code/defaults/lsp.yml",
]
voss_runtime = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits real provider APIs (run with -m live)",
    "slow: takes > 1s",
    "t1: T1 acceptance suite (run with -m t1)",
    "acceptance: SPEC-level acceptance contract tests",
    "integration: cross-process / server integration tests",
]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["voss_runtime"]

[tool.coverage.report]
fail_under = 90
