cabal-version:      3.0
name:               voss-frontend
version:            0.1.0.0
license:            MIT
maintainer:         voss-lang
build-type:         Simple

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    Ast
    JsonOut
    Parser
  build-depends:
    base >= 4.17 && < 4.21,
    text >= 2.0 && < 2.2,
    bytestring >= 0.11 && < 0.13,
    aeson >= 2.1 && < 2.3,
    aeson-pretty >= 0.8 && < 0.13,
    vector >= 0.13 && < 0.17,
    filepath >= 1.4 && < 1.7,
    megaparsec >= 9.3 && < 9.9,
    containers >= 0.6 && < 0.8

executable voss-frontend-hs
  default-language:   Haskell2010
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:
    base >= 4.17 && < 4.21,
    text >= 2.0 && < 2.2,
    bytestring >= 0.11 && < 0.13,
    filepath >= 1.4 && < 1.7,
    optparse-applicative >= 0.17 && < 0.19,
    voss-frontend
