[package]
name = "voss-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
voss-providers = { path = "../voss-providers" }
voss-tools = { path = "../voss-tools" }
voss-render = { path = "../voss-render" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
