[package]
name = "voss-app-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "voss_app_core"
path = "src/lib.rs"

[dependencies]
# Tauri + PTY-specific deps: explicit version pins (NOT in [workspace.dependencies])
tauri = { version = "2", features = ["wry"] }
portable-pty = "0.9.0"
nix = { version = "0.31", features = ["signal", "term", "process"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
# Shared deps: inherit from [workspace.dependencies] — do NOT re-pin
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
