[package]
name = "voss-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
