[package]
name = "voss-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "voss-cli"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
voss-agent = { path = "../voss-agent" }
voss-providers = { path = "../voss-providers" }
voss-auth = { path = "../voss-auth", features = [] }
voss-tools = { path = "../voss-tools" }
voss-render = { path = "../voss-render" }
voss-bridge = { path = "../voss-bridge" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = "0.8"
chrono = { workspace = true }
uuid = { workspace = true }
is-terminal = { workspace = true }
rustyline = "14"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
