[package]
name = "voss-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
voss-agent = { path = "../voss-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
is-terminal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
