[package]
name = "voss-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
is-terminal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false }

[dev-dependencies]
voss-agent = { path = "../voss-agent" }
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
