[package]
name = "voss-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust client SDK for the Voss local harness REST and SSE protocol"
repository.workspace = true

[lib]
name = "voss_sdk"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
eventsource-stream = "0.2"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
