[package]
name = "voss-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "voss_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2.3.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
voss-app-core = { path = "../../../crates/voss-app-core" }
